2006-01-11 20:05  bchiara

	* ChangeLog, NEWS, configure.in, glade/etherape.glade2,
	html/NEWS.html, po/es.po, po/etherape.pot, po/fr.po, po/nl.po,
	po/tr.po, src/diagram.c, src/info_windows.c, src/info_windows.h,
	src/protocols.c, src/protocols.h: New feature: link detail dialog

2006-01-10 18:06  bchiara

	* ChangeLog, NEWS, config.h.in, configure.in, po/POTFILES.in,
	po/es.po, po/etherape.pot, po/fr.po, po/nl.po, po/tr.po,
	src/main.c: Fixes bug 1362426 (i8n issues). Thanks to Daniel
	Nylander for hunting down that and providing a detailed example.

2006-01-10 07:43  bchiara

	* ChangeLog, NEWS, src/datastructs.c, src/datastructs.h,
	src/diagram.c, src/globals.h, src/info_windows.c,
	src/info_windows.h, src/preferences.c, src/protocols.c,
	src/protocols.h: Fixed a bug when closing the preferences window. 
	Improvments to new node info dialog.  Refactored standard protocol
	dialog, simplified proto legend code.

2006-01-08 21:33  bchiara

	* ChangeLog, glade/etherape.glade2, src/datastructs.c,
	src/diagram.c, src/globals.h, src/info_windows.c,
	src/info_windows.h, src/links.c, src/node.c, src/preferences.c,
	src/preferences.h, src/protocols.c, src/protocols.h,
	src/traffic_stats.c, src/traffic_stats.h: Completed new style node
	info dialogs (with protocol statistics). Added gui and protocol
	specific timeouts.

2006-01-07 21:39  bchiara

	* ChangeLog, glade/etherape.glade2, src/info_windows.c,
	src/preferences.c: Small fix on preferences, initial attempt at a
	combined node+protocol window

2006-01-07 18:17  bchiara

	* ChangeLog, src/capture.c, src/decode_proto.c, src/decode_proto.h,
	src/info_windows.c, src/menus.c, src/protocols.c, src/protocols.h,
	src/traffic_stats.c, src/traffic_stats.h: Upgraded protocols to
	unified statistics. Small fixes to protocol window.  Better
	separation between real packet size and captured size.

2006-01-07 09:59  bchiara

	* ChangeLog, NEWS, src/Makefile.am, src/capture.c, src/diagram.c,